src/objects/Account_Indicator__c.object
<CustomObject>
    <fields>
        <fullName>account_id__c</fullName>
        <description>Cliente.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Indicators</relationshipLabel>
        <relationshipName>Account_Indicators</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>indicator_name__c</fullName>
        <description>Descripción del indicador.</description>
        <label>Indicator description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>indicator_num__c</fullName>
        <description>Indicador.</description>
        <label>Indicator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>indicator_type__c</fullName>
        <description>Tipo de indicador.</description>
        <label>Indicator type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
		<description>Identificador único.</description>
        <externalId>true</externalId>
        <label>Unique identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>year_month_day_date__c</fullName>
        <description>Fecha</description>
        <label>Indicator date</label>
        <type>Date</type>
    </fields>
    <label>Indicador</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AI-{0000000000}</displayFormat>
        <label>Account Indicator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indicadores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>